--- a/app/src/main/res/layout/food_list_group.xml
+++ b/app/src/main/res/layout/food_list_group.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp"
     android:background="#FAF8F8">
 
@@ -15,6 +15,11 @@
         android:textSize="17dp"
         android:textColor="#030303"
         />
+
+
+
+
+
 
 
 </LinearLayout>
