--- a/app/src/main/res/layout/food_menu_item_list.xml
+++ b/app/src/main/res/layout/food_menu_item_list.xml
@@ -31,7 +31,8 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="20dp">
             <TextView
                 android:id="@+id/tv_item_id"
                 android:layout_width="0dp"
@@ -60,25 +61,36 @@
                 android:textStyle="bold"
                 android:textSize="14sp"
                 android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
+
+            <ImageView
+                android:id="@+id/increase"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_add"
+                android:visibility="invisible"
+                />
+
+
+
             <TextView
                 android:id="@+id/tv_add_to_cart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="20dp"
-                android:textSize="14sp"
-                android:text="+ Add To Cart "
-                android:textColor="#26E42E"
-                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>
-           <!-- <Button
-                android:id="@+id/bt_addcart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
                 android:layout_marginRight="10dp"
-                android:layout_marginTop="16dp"
-                android:textColor="@color/colorPrimary"
-                android:text="Add to Cart"
-                android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"/>-->
+                android:textSize="14sp"
+                android:text="Add"
+                android:textColor="#26E42E"
+                />
+            <ImageView
+                android:id="@+id/decrease"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@drawable/ic_sub"
+                android:visibility="invisible"
+                />
+
+
+
         </LinearLayout>
     </RelativeLayout>
 </LinearLayout>
